[gd_scene load_steps=2 format=3 uid="uid://db2yp17lrp2me"]

[ext_resource type="Script" uid="uid://d35ye308heefg" path="res://interface_1.gd" id="1_68cuy"]

[node name="Interface1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_68cuy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 656.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 656.0

[node name="ColorRect2" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 265.0
offset_right = 815.0
offset_bottom = 654.0
color = Color(0, 0.427913, 0.429024, 1)

[node name="UserIDTxT" type="TextEdit" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -112.5
offset_right = 182.0
offset_bottom = -53.5
grow_horizontal = 2
grow_vertical = 2

[node name="PasswordTxT" type="TextEdit" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -33.5
offset_right = 182.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2

[node name="ID" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 299.0
offset_top = 224.0
offset_right = 358.0
offset_bottom = 259.0
text = "UserID"

[node name="ID2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 298.0
offset_top = 310.0
offset_right = 357.0
offset_bottom = 345.0
text = "Password
"

[node name="LOGIN" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = 61.0
offset_right = 54.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
text = "LOG IN "

[node name="SIGNIN" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = 143.0
offset_right = 54.5
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
text = "SIGN IN
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1040.0
offset_top = 607.0
offset_right = 1134.0
offset_bottom = 656.0
text = "Ver. beta 2
"

[node name="Notification" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 445.0
offset_top = 137.0
offset_right = 685.0
offset_bottom = 185.0

[connection signal="pressed" from="Panel/LOGIN" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Panel/SIGNIN" to="." method="_on_signin_pressed"]
